# Security-Mode

./: LICENSE  README.md  Security-Mode  Security-Mode.desktop  build.hacker
auditing-logging/: shard.yml
cli/: shard.yml
core/: Cargo.toml
core/src/: main.rs
desktop/: Security-Mode.desktop
env/src/: main.rs
pentest/: main.py
policy-manager/: Cargo.toml
policy-manager/src/: main.rs
source-code/cli/: shard.yml
source-code/env/: Cargo.toml
source-code/gui/: main.py
source-code/pentest/: main.py
source-code/policy-engine/: go.mod  main.go
ui/: meson.build
ui/src/: window.vala
