[package]
name = "policy-manager"
version = "0.1.0"
edition = "2021"
authors = ["HackerOS Team"]
description = "Policy manager for Security Mode, defining and retrieving profiles."

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
